k8s-spring-boot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-springboot
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-springboot
  template:
    metadata:
      labels:
        app: test-springboot
    spec:
      containers:
        - name: springboot
          image: bhalchandragawade08/test-docker-demo:test-springboot-demo
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: test-springboot
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: test-springboot
